enable localization with L20n

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
-  <title>React Redux Starter Kit</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="defaultLanguage" content="en">
+  <meta name="availableLanguages" content="es, en">
+
+  <title data-l10n-id="app-title"></title>
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="localization" href="locales/base.{locale}.ftl">
+
+  <script defer src="/l20n.js"></script>
 </head>
 <body>
   <div id="root" style="height: 100%"></div>
