fix locales reference

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <title data-l10n-id="app-title"></title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="localization" href="locales/base.{locale}.ftl">
+  <link rel="localization" href="/locales/base.{locale}.ftl">
 
   <script defer src="/l20n.js"></script>
 </head>
